@@ -215,6 +215,8 @@ Version CVS HEAD (?)
       plugin was unloaded
     - bugfix: two private structs had the same name, which could cause
       problems if the linker chose the wrong constructor
+    - fixed low-level ConditionServer usage bug that caused lockups on
+      Windows
 
 
 Version 0.5.1 (6 December 2007)
